<resources>
    <string name="app_name">Qualimoments</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>

    <string name="facebook_app_id">197454974316264</string>
    <string name="fb_login_protocol_scheme">fb197454974316264</string>

    <string-array name="menuItems">
        <item>Home</item>
        <item>News feed</item>
        <item>messages</item>
        <item>notifications</item>
        <item>network</item>
        <item>settings</item>
        <item>search</item>
        <item>log out</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="news_feed">News feed</string>
    <string name="network">Network</string>
    <string name="title_activity_maps">Map</string>
    <string name="LinkedInLogin">login with LinkedIn</string>

    <string name="login_with_facebook">login with facebook</string>
    <string name="connect">Connect</string>
    <string name="search">Search</string>
    <string name="mail">mail</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm password</string>
</resources>
